--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
         <title>
             My Bio
         </title>
+        <style>
+            header {
+                margin-bottom: 15px;
+                font-size: 60px;
+                color: limegreen;
+                text-align: center;
+                text-decoration: underline;
+                background-color: blue;
+            }
+            h2 {
+                margin-bottom: 15px;
+                font-size: 30px;
+                color: black;
+                text-align: center;
+                background-color: red;
+            }
+            img {
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+            border:10px dashed green;
+            }
+        </style>
     </head>
     <body>
         <header>Student Bio</header>
