--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
             margin-left: auto;
             margin-right: auto;
             display: block;
-            border:10px dashed green;
+            border:10px dashed yellow;
             }
         </style>
     </head>
     <body>
         <header>Student Bio</header>
         <div>
+
             <section>
                     <h2>Michael Clemons</h2>
                     <img src="https://placehold.it/200x200" alt="Michael Clemons">
